--- a/notebooks/Draftplot_temperature.ipynb
+++ b/notebooks/Draftplot_temperature.ipynb
@@ -38,8 +38,8 @@
     "nyears = sum(year1+1-year0)\n",
     "\n",
     "basin = np.arange(0,5)\n",
-    "bnames = ['EAIS','WEDD','AMUN','ROSS','APEN']\n",
-    "bcol = ['tab:green','tab:blue','tab:red','tab:orange','tab:purple']\n",
+    "bnames = ['EAIS','ROSS','AMUN','WEDD','PENS']\n",
+    "bcol = ['tab:blue','tab:orange','tab:red','tab:purple','tab:green']\n",
     "rean = [0.5,-0.8,1.4,-0.3,-0.2]"
    ]
   },
@@ -86,17 +86,17 @@
     "        mm[((lons<173) & (lons>-10)) & (lats<-65) & (lats>-76)] = 1\n",
     "        depp = 369\n",
     "    if b==1:\n",
-    "        #WEDD\n",
-    "        mm[(lons>-65) & (lons<-10) & (lats<-72)] = 1\n",
-    "        depp = 420\n",
+    "        #ROSS\n",
+    "        mm[((lons>150) | (lons<-150)) & (lats<-76)] = 1\n",
+    "        depp = 312        \n",
     "    if b==2:\n",
     "        #AMUN\n",
     "        mm[(lons>-150) & (lons<-80) & (lats<-70)] = 1\n",
     "        depp = 305\n",
     "    if b==3:\n",
-    "        #ROSS\n",
-    "        mm[((lons>150) | (lons<-150)) & (lats<-76)] = 1\n",
-    "        depp = 312\n",
+    "        #WEDD\n",
+    "        mm[(lons>-65) & (lons<-10) & (lats<-72)] = 1\n",
+    "        depp = 420\n",
     "    if b==4:\n",
     "        #APEN\n",
     "        mm[(lons>-66) & (lons<-56) & (lats>-70) & (lats<-65)] = 1\n",
