--- a/notebooks/Read_all_rfs.ipynb
+++ b/notebooks/Read_all_rfs.ipynb
@@ -1,40 +1,54 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d4a9f64c-1bdb-40ba-ab96-26347a191b0c",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7e450173-46c8-4943-ad2b-80dab41e71a6",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Plot time series of temperature, mass loss, and sea level rise for a single ensemble member\n",
+    "#Read orf\n",
     "\n",
-    "SSP: 245\n",
-    "ESM: EC-Earth 3\n",
-    "ISM: CISM_NCA\n",
+    "#Take difference from control [degC]\n",
     "\n",
-    "Plot iterations, highlighting first and last\n",
-    "\n",
-    "Plot T, ML, SLR for each basin and Antarctic-wide (6x3 plots)"
+    "#Divide by perturbation 400 Gt/yr -> [degC per Gt/yr]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9253e199-1084-4a78-ae36-f7caa08b57c8",
+   "execution_count": 2,
+   "id": "f35c98e7-3d8d-449d-bff1-62ae86199212",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import xarray as xr\n",
-    "import matplotlib.pyplot as plt"
+    "#Read irf \n",
+    "\n",
+    "#[check basins!]\n",
+    "\n",
+    "#Take difference from t=0\n",
+    "\n",
+    "#Change sign negative -> positive [Gt]\n",
+    "\n",
+    "#Differentiate in time -> [Gt/yr]\n",
+    "\n",
+    "#Divide by perturbation 8 m/yr -> [Gt/yr per m/yr]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dcf5fded-a7c6-4b40-a258-fb77006796be",
+   "execution_count": 3,
+   "id": "7ba1093c-e97b-4463-8bc8-6e21234d594c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Read srf\n",
+    "\n",
+    "#Check basins!\n",
+    "\n",
+    "#Ensure units [m/yr per m/yr]\n",
+    "\n",
+    "#From codep:\n",
+    "\n",
     "def calcSLR(TH,years):\n",
     "    SLRens = np.zeros((len(imods),TH.shape[0],TH.shape[1]))\n",
     "    for i,imod in enumerate(imods):\n",
@@ -48,6 +62,14 @@
     "    SLRb = np.sum(SLRens,axis=0)/len(imods)\n",
     "    return SLRb,years"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fab0290b-161f-4b20-9abb-2124dc3ee498",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
