--- a/notebooks/Make_masks.ipynb
+++ b/notebooks/Make_masks.ipynb
@@ -2,27 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import pyproj\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.ticker as mticker\n",
-    "import cmocean as cmo\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
-    "import cartopy.crs as ccrs\n",
-    "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
-    "\n",
-    "import numpy as np\n",
-    "import copy"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,59 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mpl.rcParams['font.family'] = 'serif'\n",
-    "mpl.rcParams['axes.titlesize'] = 9\n",
-    "mpl.rcParams['axes.labelsize'] = 9\n",
-    "mpl.rcParams['legend.fontsize'] = 9\n",
-    "\n",
-    "mpl.rcParams['figure.subplot.wspace'] = .02\n",
-    "mpl.rcParams['figure.subplot.hspace'] = .1\n",
-    "mpl.rcParams['figure.subplot.left'] = .01\n",
-    "mpl.rcParams['figure.subplot.right'] = .99\n",
-    "mpl.rcParams['figure.subplot.top'] = .95\n",
-    "mpl.rcParams['figure.subplot.bottom'] = .01\n",
-    "mpl.rcParams['figure.figsize'] = (5,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Plot old and new masks\n",
-    "\n",
-    "proj = ccrs.SouthPolarStereo()\n",
-    "cmap = plt.get_cmap('tab10',10)\n",
-    "cmap.set_under('w')\n",
-    "cmap.set_over('k')\n",
-    "\n",
-    "titles = ['a) Old iceberg calving','b) New iceberg calving','c) Old runoff and basal melt','d) New runoff and basal melt']\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "\n",
-    "for v,vv in enumerate([ds['calving_point_id'],calv,ds['arrival_point_id'],arr]):\n",
-    "    ax = fig.add_subplot(2,2,v+1,projection=proj)\n",
-    "    ax.set_extent([-180,180, -90, -60], crs=ccrs.PlateCarree())\n",
-    "    im = ax.pcolormesh(lon,lat,vv,shading='auto',cmap=cmap,transform=ccrs.PlateCarree(),vmin=65.5,vmax=75.5)\n",
-    "    ax.coastlines(lw=.1)\n",
-    "\n",
-    "    gl = ax.gridlines(crs=ccrs.PlateCarree(),draw_labels=False)\n",
-    "    gl.xlocator = mticker.FixedLocator(np.arange(-180,210,30))\n",
-    "    gl.xformatter = LONGITUDE_FORMATTER\n",
-    "    ax.set_title(titles[v],loc='left')\n",
-    "    \n",
-    "plt.savefig(f'../draftfigs/masks.png',dpi=450)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,40 +177,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "proj = ccrs.SouthPolarStereo()\n",
-    "fig = fig = plt.figure(figsize=(18,15))\n",
-    "\n",
-    "ax = fig.add_subplot(111,projection=proj)\n",
-    "ax.set_extent([-180,180, -90, -63], crs=ccrs.PlateCarree())\n",
-    "im = ax.pcolormesh(lon,lat,arr,shading='auto',cmap=cmap,transform=ccrs.PlateCarree(),vmin=65.5,vmax=75.5)\n",
-    "ax.coastlines(lw=.1)\n",
-    "\n",
-    "\n",
-    "ds = xr.open_dataset('../data/ecefiles/runoff_depth.nc')\n",
-    "dep = ds['rodepth'][0,:,:]\n",
-    "llon = ds['nav_lon'][:]\n",
-    "llat = ds['nav_lat'][:]\n",
-    "\n",
-    "ccmap = copy.copy(mpl.cm.get_cmap(\"cmo.matter\"));\n",
-    "ccmap.set_under('w')\n",
-    "ccmap.set_bad('w')\n",
-    "\n",
-    "im = ax.scatter(llon,llat,15,c=dep,cmap=ccmap,transform=ccrs.PlateCarree(),lw=0,alpha=.5)\n",
-    "plt.colorbar(im)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -280,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
