--- a/notebooks/Extract_timeseries.ipynb
+++ b/notebooks/Extract_timeseries.ipynb
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "071cf1c5-7d58-4e10-bce6-958b974e49cc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import glob\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "33bcdabd-13e2-40d8-9288-6575fe18bcf8",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "ad826e9f-1c36-46cf-a9a2-ba508d273d76",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
