update control ts

--- a/notebooks/Extract_timeseries.ipynb
+++ b/notebooks/Extract_timeseries.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import xarray as xr\n",
     "import glob\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "43c7ad0b-6453-4a3e-a58f-450252d614ae",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,17 @@
       "2036 186 [ 0.56977004  0.33670583  1.82374529 -1.19835339 -0.62934216]\n",
       "2037 187 [ 0.5159757   0.30666372  1.70827159 -0.90655375 -0.66260701]\n",
       "2038 188 [ 0.49357802  0.14117917  1.52468629 -1.00829412 -0.52189462]\n",
-      "2039 189 [ 0.50730035 -0.00517085  1.49181012 -1.13988122 -0.5334416 ]\n"
+      "2039 189 [ 0.50730035 -0.00517085  1.49181012 -1.13988122 -0.5334416 ]\n",
+      "2040 190 [ 0.49798219 -0.24160213  1.50975246 -1.27609984 -0.69446264]\n",
+      "2041 191 [ 0.49375907 -0.34656683  1.51004874 -1.15870336 -0.65520224]\n",
+      "2042 192 [ 0.48614728 -0.3016817   1.56444191 -1.06361763 -0.643444  ]\n",
+      "2043 193 [ 0.48091969 -0.24372061  1.50031653 -1.1365617  -0.72127213]\n",
+      "2044 194 [ 0.46561744 -0.28359749  1.40596602 -1.301476   -0.80485959]\n",
+      "2045 195 [ 0.49547139 -0.30782884  1.40774217 -1.34249747 -0.89764715]\n",
+      "2046 196 [ 0.55781083 -0.23518908  1.48656838 -1.33832258 -0.84126272]\n",
+      "2047 197 [ 0.55658092 -0.10954317  1.51494529 -1.28231489 -0.89715395]\n",
+      "2048 198 [ 0.48383021 -0.03327957  1.65122598 -1.25079759 -0.71300836]\n",
+      "2049 199 [ 0.46831882  0.36998414  1.68854413 -1.31311866 -0.85485909]\n"
      ]
     }
    ],
@@ -359,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "6569ded2-6f9c-4afb-a2df-5f3fbaee5c6b",
    "metadata": {},
    "outputs": [],
@@ -367,15 +377,20 @@
     "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
     "\n",
     "ds = xr.Dataset({'temp':temp2})\n",
-    "ds.to_netcdf(f'../data/temperature_{run}.nc')\n",
+    "ds.to_netcdf(f'../data/temperature_{run}.nc',mode='w')\n",
     "ds.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6453c732-2c35-48fc-84bf-176ed18b8acd",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "mask2 = xr.DataArray(mask,dims=('basin','olevel','y','x'),coords={'basin':basin,'olevel':levmid},attrs={'long_name':'basin mask'})\n",
@@ -383,7 +398,7 @@
     "lon2  = xr.DataArray(lon,dims=('y','x'))\n",
     "\n",
     "ds = xr.Dataset({'mask':mask2,'lat':lat2,'lon':lon2})\n",
-    "ds.to_netcdf(f'../data/basinmask.nc')\n",
+    "ds.to_netcdf(f'../data/basinmask.nc',mode='w')\n",
     "ds.close()"
    ]
   },
