Use proper temperature data from eveline

--- a/notebooks/Draftplot_ts_control.ipynb
+++ b/notebooks/Draftplot_ts_control.ipynb
@@ -36,10 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e5f390e5-44bd-4f4c-83a5-2f82b173f655",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/5b/bj_x27m52qs_n65zwyzcx5t80000gn/T/ipykernel_38576/1791230032.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mrun\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'n011'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'../data/temperature_{run}.nc'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mbasin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mttime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'xr' is not defined"
+     ]
+    }
+   ],
    "source": [
     "run = 'n011'\n",
     "\n",
@@ -56,8 +68,29 @@
     "ds.close()\n",
     "\n",
     "#From Eveline:\n",
-    "rean = np.array([0.5,-0.3,1.4,-0.8,-0.2])\n",
-    "rstd = np.array([0.2,0.3,0.2,0.2,0.2]) #dummy"
+    "rean = np.array([0.53,-0.18,1.37,-0.79,-0.24])\n",
+    "r10 = np.array([0.37,-0.78,1.01,-0.98,-0.43])\n",
+    "r90 = np.array([0.68,0.49,1.60,-0.48,-0.03])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f9cb579-b195-4696-ad79-e828f6a157ab",
+   "metadata": {},
+   "source": [
+    "Reanalysis merged data:\n",
+    "\n",
+    "basin mean  5th  95th\n",
+    "\n",
+    "eais  0.53  0.37  0.68\n",
+    "\n",
+    "ross -0.18 -0.78  0.49\n",
+    "\n",
+    "amun  1.37  1.01  1.60\n",
+    "\n",
+    "wedd -0.79 -0.98 -0.48\n",
+    "\n",
+    "apen -0.24 -0.43 -0.03\n"
    ]
   },
   {
@@ -187,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
