bunch of corrections to temperatures

--- a/notebooks/Create_dummydata.ipynb
+++ b/notebooks/Create_dummydata.ipynb
@@ -35,8 +35,7 @@
    "source": [
     "#Read larmip data\n",
     "ds = xr.open_dataset('../data/larmiptemp.nc')\n",
-    "\n",
-    "ds['exp'] = ['EAIS','ROSS','AMUN','WEDD','PENS','TOTL','HALF','DOUB']"
+    "ds['exp'] = ut.exp"
    ]
   },
   {
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a0095e83-3ad1-4c0f-970d-ef7bba1652a6",
    "metadata": {},
    "outputs": [],
@@ -142,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
