--- a/notebooks/Extract_cmip6.ipynb
+++ b/notebooks/Extract_cmip6.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "776eae91-ce70-40b7-be9c-a25a58714a29",
+   "metadata": {},
+   "source": [
+    "Get pre-industrial control time series from EC-Earth3 CMIP6"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "31c08280-62ae-4681-be80-6931bc681bb4",
@@ -12,7 +20,10 @@
     "import numpy as np\n",
     "import cftime\n",
     "\n",
-    "np.seterr(all='ignore');"
+    "#np.seterr(all='ignore');\n",
+    "import sys\n",
+    "sys.path.append('../src')\n",
+    "import utils as ut"
    ]
   },
   {
@@ -24,9 +35,7 @@
    "source": [
     "fnames = sorted(glob.glob(f'../data/ecefiles/cmip6/thetao*.nc'))\n",
     "\n",
-    "nyears = len(fnames)\n",
-    "\n",
-    "basin = ['EAIS','ROSS','AMUN','WEDD','PENS']"
+    "nyears = len(fnames)\n"
    ]
   },
   {
@@ -62,32 +71,33 @@
     "#Get weighted mask for basin averages\n",
     "lons = np.repeat(lon[np.newaxis,:,:],len(levmid),axis=0)\n",
     "lats = np.repeat(lat[np.newaxis,:,:],len(levmid),axis=0)\n",
-    "mask = np.repeat(np.zeros(lons.shape)[np.newaxis,:,:,:],len(basin),axis=0)\n",
+    "mask = np.repeat(np.zeros(lons.shape)[np.newaxis,:,:,:],len(ut.basin),axis=0)\n",
     "aweight = np.zeros(mask.shape)\n",
     "\n",
-    "for b,bb in enumerate(basin):\n",
+    "for b,bas in enumerate(ut.basin):\n",
     "    mm = np.zeros(lons.shape)\n",
-    "    if b==0:\n",
+    "    if bas=='East Ant.':\n",
     "        #EAIS\n",
     "        mm[((lons<173) & (lons>-10)) & (lats<-65) & (lats>-76)] = 1\n",
     "        depp = 369\n",
-    "    if b==1:\n",
+    "    elif bas=='Ross':\n",
     "        #ROSS\n",
     "        mm[((lons>150) | (lons<-150)) & (lats<-76)] = 1\n",
     "        depp = 312        \n",
-    "    if b==2:\n",
+    "    elif bas=='Amundsen':\n",
     "        #AMUN\n",
     "        mm[(lons>-150) & (lons<-80) & (lats<-70)] = 1\n",
     "        depp = 305\n",
-    "    if b==3:\n",
+    "    elif bas=='Weddell':\n",
     "        #WEDD\n",
     "        mm[(lons>-65) & (lons<-10) & (lats<-72)] = 1\n",
     "        depp = 420\n",
-    "    if b==4:\n",
+    "    elif bas=='Peninsula':\n",
     "        #APEN\n",
     "        mm[(lons>-66) & (lons<-56) & (lats>-70) & (lats<-65)] = 1\n",
     "        mm[(lons>-80) & (lons<-65) & (lats>-75) & (lats<-70)] = 1\n",
     "        depp = 420\n",
+    "    else: print('error in basin name')\n",
     "        \n",
     "    z0 = depp-50.\n",
     "    i0 = np.argmax(lev[:,1]>z0)\n",
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "adbbdd88-c563-4161-b1b9-8a5b168dcdfd",
    "metadata": {
     "tags": []
@@ -327,7 +337,7 @@
    ],
    "source": [
     "#Calculate basin-average annual time series\n",
-    "tbas = np.zeros((nyears,len(basin)))\n",
+    "tbas = np.zeros((nyears,len(ut.basin)))\n",
     "ttime = np.arange(nyears)\n",
     "months = np.arange(0,12)\n",
     "\n",
@@ -340,27 +350,27 @@
     "    \n",
     "    year0 = int(fname[-16:-12])\n",
     "    \n",
-    "    tb = np.zeros((len(basin)))\n",
+    "    tb = np.zeros((len(ut.basin)))\n",
     "    ny = int(len(time)/12)\n",
     "    for y in np.arange(0,ny):\n",
-    "        for b,bas in enumerate(basin):\n",
+    "        for b,bas in enumerate(ut.basin):\n",
     "            for m,mm in enumerate(months):\n",
     "                tbb = np.nansum(temp[m+12*y,:,:,:]*aweight[b,:,:,:])/np.nansum(aweight[b,:,:,:])\n",
     "                tb[b] += tbb*secs[m]\n",
     "            tbas[c,b] = tb[b]/sum(secs)\n",
     "        print(year0+y,c,tbas[c,:])\n",
-    "        tb = np.zeros((len(basin)))\n",
+    "        tb = np.zeros((len(ut.basin)))\n",
     "        c += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "933e71a9-afcd-4cb5-88da-4b6275bf5b8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime-nyears,'basin':basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
+    "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime-nyears,'basin':ut.basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
     "\n",
     "ds = xr.Dataset({'temp':temp2})\n",
     "ds.to_netcdf(f'../data/temperature_cmip6.nc',mode='w')\n",
@@ -392,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
