--- a/notebooks/Extract_timeseries.ipynb
+++ b/notebooks/Extract_timeseries.ipynb
@@ -19,7 +19,12 @@
    "source": [
     "import xarray as xr\n",
     "import glob\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "sys.path.append('../src')\n",
+    "import utils as ut"
    ]
   },
   {
@@ -43,9 +48,7 @@
     "\n",
     "year0 = np.array([int(fname[-27:-23]) for fname in fnames])\n",
     "year1 = np.array([int(fname[-18:-14]) for fname in fnames])\n",
-    "nyears = sum(year1+1-year0)\n",
-    "\n",
-    "basin = ['EAIS','ROSS','AMUN','WEDD','PENS']"
+    "nyears = sum(year1+1-year0)"
    ]
   },
   {
@@ -81,28 +84,28 @@
     "#Get weighted mask for basin averages\n",
     "lons = np.repeat(lon[np.newaxis,:,:],len(levmid),axis=0)\n",
     "lats = np.repeat(lat[np.newaxis,:,:],len(levmid),axis=0)\n",
-    "mask = np.repeat(np.zeros(lons.shape)[np.newaxis,:,:,:],len(basin),axis=0)\n",
+    "mask = np.repeat(np.zeros(lons.shape)[np.newaxis,:,:,:],len(ut.basin),axis=0)\n",
     "aweight = np.zeros(mask.shape)\n",
     "\n",
-    "for b,bb in enumerate(basin):\n",
+    "for b,bas in enumerate(ut.basin):\n",
     "    mm = np.zeros(lons.shape)\n",
-    "    if b==0:\n",
+    "    if bas=='East Ant.':\n",
     "        #EAIS\n",
     "        mm[((lons<173) & (lons>-10)) & (lats<-65) & (lats>-76)] = 1\n",
     "        depp = 369\n",
-    "    if b==1:\n",
+    "    if bas=='Ross':\n",
     "        #ROSS\n",
     "        mm[((lons>150) | (lons<-150)) & (lats<-76)] = 1\n",
     "        depp = 312        \n",
-    "    if b==2:\n",
+    "    if bas=='Amundsen':\n",
     "        #AMUN\n",
     "        mm[(lons>-150) & (lons<-80) & (lats<-70)] = 1\n",
     "        depp = 305\n",
-    "    if b==3:\n",
+    "    if bas=='Weddell':\n",
     "        #WEDD\n",
     "        mm[(lons>-65) & (lons<-10) & (lats<-72)] = 1\n",
     "        depp = 420\n",
-    "    if b==4:\n",
+    "    if bas=='Peninsula':\n",
     "        #APEN\n",
     "        mm[(lons>-66) & (lons<-56) & (lats>-70) & (lats<-65)] = 1\n",
     "        mm[(lons>-80) & (lons<-65) & (lats>-75) & (lats<-70)] = 1\n",
@@ -351,7 +354,7 @@
    ],
    "source": [
     "#Calculate basin-average annual time series\n",
-    "tbas = np.zeros((nyears,len(basin)))\n",
+    "tbas = np.zeros((nyears,len(ut.basin)))\n",
     "ttime = np.arange(nyears)\n",
     "months = np.arange(0,12)\n",
     "\n",
@@ -364,16 +367,16 @@
     "    \n",
     "    year0 = int(fname[-27:-23])\n",
     "    \n",
-    "    tb = np.zeros((len(basin)))\n",
+    "    tb = np.zeros((len(ut.basin)))\n",
     "    ny = int(len(time)/12)\n",
     "    for y in np.arange(0,ny):\n",
-    "        for b,bas in enumerate(basin):\n",
+    "        for b,bas in enumerate(ut.basin):\n",
     "            for m,mm in enumerate(months):\n",
     "                tbb = np.nansum(temp[m+12*y,:,:,:]*aweight[b,:,:,:])/np.nansum(aweight[b,:,:,:])\n",
     "                tb[b] += tbb*secs[m]\n",
     "            tbas[c,b] = tb[b]/sum(secs)\n",
     "        print(year0+y,c,tbas[c,:])\n",
-    "        tb = np.zeros((len(basin)))\n",
+    "        tb = np.zeros((len(ut.basin)))\n",
     "        c += 1"
    ]
   },
@@ -384,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
+    "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':ut.basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
     "\n",
     "ds = xr.Dataset({'temp':temp2})\n",
     "ds.to_netcdf(f'../data/temperature_{run}.nc',mode='w')\n",
@@ -396,14 +399,11 @@
    "execution_count": 8,
    "id": "6453c732-2c35-48fc-84bf-176ed18b8acd",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "mask2 = xr.DataArray(mask,dims=('basin','olevel','y','x'),coords={'basin':basin,'olevel':levmid},attrs={'long_name':'basin mask'})\n",
+    "mask2 = xr.DataArray(mask,dims=('basin','olevel','y','x'),coords={'basin':ut.basin,'olevel':levmid},attrs={'long_name':'basin mask'})\n",
     "lat2  = xr.DataArray(lat,dims=('y','x'))\n",
     "lon2  = xr.DataArray(lon,dims=('y','x'))\n",
     "\n",
