Proper video subsurfacetemp

--- a/notebooks/Read_alldata.ipynb
+++ b/notebooks/Read_alldata.ipynb
@@ -265,7 +265,9 @@
     "ds = xr.open_dataset(f'../data/temperature_ctrl.nc')\n",
     "tctrl = ds.temp\n",
     "ds.close()\n",
-    "    \n",
+    "\n",
+    "pert = 400\n",
+    "\n",
     "if ready['totl']:\n",
     "    orf  = np.zeros((len(rftime),len(exp),len(basin)))\n",
     "    \n",
