--- a/notebooks/Read_ece_ts_diagnostics.ipynb
+++ b/notebooks/Read_ece_ts_diagnostics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fb06aaa8-5d90-486e-8010-5e1b686fe71c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "29391d1f-4c2d-4b10-bf4b-7fac02b76aea",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7b471a45-3c69-49a4-baee-ea551ac218fe",
    "metadata": {},
    "outputs": [],
@@ -112,10 +112,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dd3182eb-96ff-4a22-9c7f-03e362ae51b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved ../data/diag_tot2_Alaska_zos.nc\n",
+      "Saved ../data/diag_tot2_Alaska_sos.nc\n",
+      "Saved ../data/diag_tot2_Alaska_tos.nc\n",
+      "Saved ../data/diag_tot2_Alaska_so.nc\n",
+      "Saved ../data/diag_tot2_Alaska_thetao.nc\n",
+      "Saved ../data/diag_tot2_Alaska_vfxice.nc\n",
+      "Saved ../data/diag_tot2_Alaska_friver.nc\n",
+      "Saved ../data/diag_tot2_Alaska_calving.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_zos.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_sos.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_tos.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_so.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_thetao.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_vfxice.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_friver.nc\n",
+      "Saved ../data/diag_tot2_Antarctic_calving.nc\n",
+      "Saved ../data/diag_tot2_Global_zos.nc\n",
+      "Saved ../data/diag_tot2_Global_sos.nc\n",
+      "Saved ../data/diag_tot2_Global_tos.nc\n",
+      "Saved ../data/diag_tot2_Global_so.nc\n",
+      "Saved ../data/diag_tot2_Global_thetao.nc\n",
+      "Saved ../data/diag_tot2_Global_vfxice.nc\n",
+      "Saved ../data/diag_tot2_Global_friver.nc\n",
+      "Saved ../data/diag_tot2_Global_calving.nc\n",
+      "Finished\n"
+     ]
+    }
+   ],
    "source": [
     "runs = ['tot2']\n",
     "#runs = ['n011','quar','half','hal2','totl']\n",
