--- a/notebooks/Read_ece_ts_oceantemp.ipynb
+++ b/notebooks/Read_ece_ts_oceantemp.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "071cf1c5-7d58-4e10-bce6-958b974e49cc",
    "metadata": {},
    "outputs": [],
@@ -31,16 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "67b42e8d-9f9e-4806-a2c9-c335ca093529",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Run if changed:\n",
-    "#save_basinvolumes()\n",
-    "\n",
     "#Get basin volume\n",
-    "ds = xr.open_dataset('../data/basinvolumes.nc')\n",
+    "try:\n",
+    "    ds = xr.open_dataset('../data/basinvolumes.nc')\n",
+    "except:\n",
+    "    save_basinvolumes()\n",
+    "    ds = xr.open_dataset('../data/basinvolumes.nc')\n",
     "volume = ds['volume']\n",
     "ds.close()\n",
     "\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4d0d972-4bad-4286-9588-d900752dd4d9",
    "metadata": {},
    "outputs": [],
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "26569e4c-3ead-4302-a760-4f1d20e79e29",
    "metadata": {},
    "outputs": [],
@@ -78,6 +79,56 @@
     "    rrun = 'ctrl'\n",
     "else:\n",
     "    rrun = run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9b7ecfcd-8d06-46be-b186-f8930c0ec3e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "390 months =  32 y 6 m\n",
+      "Saved ../data/temperature_mon_tot2.nc                                                                                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Monthly time series\n",
+    "\n",
+    "nmonths = 0\n",
+    "for fname in fnames:\n",
+    "    ds = xr.open_dataset(fname)\n",
+    "    nmonths += len(ds.time_counter)\n",
+    "    ds.close()\n",
+    "print(nmonths, 'months = ',int(np.floor(nmonths/12)),'y',int(nmonths-12*np.floor(nmonths/12)),'m')\n",
+    "\n",
+    "#Calculate basin-average annual time series\n",
+    "tbas = np.zeros((nmonths,len(volume.basin)))\n",
+    "ttime = np.arange(nmonths)\n",
+    "\n",
+    "c = 0\n",
+    "for f,fname in enumerate(fnames):\n",
+    "    ds = xr.open_dataset(fname)\n",
+    "    time = ds['time_centered'].values\n",
+    "    temp = ds['thetao'].values\n",
+    "    ds.close()\n",
+    "    \n",
+    "    for m in range(len(time)):\n",
+    "        for b,bas in enumerate(volume.basin):\n",
+    "            tbas[c,b] = np.nansum(temp[m,:,:,:]*volume.sel(basin=bas))/np.nansum(volume.sel(basin=bas))\n",
+    "        print(f'{c:3.0f}',tbas[c,:],end='                                                \\r')\n",
+    "        c += 1\n",
+    "        \n",
+    "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':volume.basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
+    "ds = xr.Dataset({'temp':temp2})\n",
+    "savename = f'../data/temperature_mon_{rrun}.nc'\n",
+    "ds.to_netcdf(savename,mode='w')\n",
+    "ds.close()\n",
+    "print('Saved',savename,'                                     ')"
    ]
   },
   {
@@ -143,48 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7ecfcd-8d06-46be-b186-f8930c0ec3e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Monthly time series\n",
-    "\n",
-    "nmonths = 0\n",
-    "for fname in fnames:\n",
-    "    ds = xr.open_dataset(fname)\n",
-    "    nmonths += len(ds.time_counter)\n",
-    "    ds.close()\n",
-    "print(nmonths, 'months')\n",
-    "\n",
-    "#Calculate basin-average annual time series\n",
-    "tbas = np.zeros((nmonths,len(ut.basin)))\n",
-    "ttime = np.arange(nmonths)\n",
-    "\n",
-    "c = 0\n",
-    "for f,fname in enumerate(fnames):\n",
-    "    ds = xr.open_dataset(fname)\n",
-    "    time = ds['time_centered'].values\n",
-    "    temp = ds['thetao'].values\n",
-    "    ds.close()\n",
-    "    \n",
-    "    for m in range(len(time)):\n",
-    "        for b,bas in enumerate(ut.basin):\n",
-    "            tbas[c,b] = np.nansum(temp[m,:,:,:]*volume.sel(basin=bas))/np.nansum(volume.sel(basin=bas))\n",
-    "        print(f'{c:3.0f}',tbas[c,:],end='                     \\r')\n",
-    "        c += 1\n",
-    "        \n",
-    "temp2 = xr.DataArray(tbas,dims=('time','basin'),coords={'time':ttime,'basin':ut.basin},attrs={'unit':'degrees Celcius','long_name':'temperature time series per basin'})\n",
-    "ds = xr.Dataset({'temp':temp2})\n",
-    "savename = f'../data/temperature_mon_{rrun}.nc'\n",
-    "ds.to_netcdf(savename,mode='w')\n",
-    "ds.close()\n",
-    "print('Saved',savename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3c99fcc-7df7-4a0b-b3d8-4f69f35e5ed2",
+   "id": "13f9473e-481f-43b3-b91f-ec2253984c00",
    "metadata": {},
    "outputs": [],
    "source": []
